--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,6 @@ gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10
 MarkupSafe==1.1.0
-numpy==1.16.0
-scikit-learn==0.20.2
-scipy==1.2.0
-selenium==3.141.0
-sklearn==0.0
+Resource==0.2.1
 urllib3==1.24.1
 Werkzeug==0.14.1
